# geeup

./: .gitignore  404.html  CNAME  README.md  README.txt  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml
.github/workflows/: CI.yml  publish-readme.yml  python-package.yml
changelog/: index.html
docs/: changelog.md  index.md  installation.md  license.md  search.md
docs/projects/: cancel_tasks.md  cookies_setup.md  delete.md  ee_init.md  get_metadata.md  image_upload.md  init.md  quota.md  rename.md  selenium.md  table_upload.md  task_status.md  zipshape.md
geeup/: __init__.py  aoi.json  auth.py  batch_remover.py  batch_tuploader.py  batch_uploader.py  config.py  data.json  failed_upload.csv  geeup.py  getmeta.py  logconfig.json  manifest_lib.py  metadata_ingest.py  metadata_loader.py  metadatfix_sr.py  quota.py  sel-latest-linux.py  sel-latest-mac.py  sel-latest-win.py  sel_setup.py  sel_tuploader.py  tasks.py  tuploader.py  zip_shape.py  zipfiles.py
geeup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
installation/: index.html
license/: index.html
projects/cancel_tasks/: index.html
projects/cookies_setup/: index.html
projects/delete/: index.html
projects/ee_init/: index.html
projects/get_metadata/: index.html
projects/image_upload/: index.html
projects/quota/: index.html
projects/rename/: index.html
projects/table_upload/: index.html
projects/task_status/: index.html
projects/zipshape/: index.html
search/: index.html  search_index.json
tests/: __init__.py  conftest.py  fake_ee.py  test_geeup.py  test_geeup_modules.py
